<resources>
    <string name="app_name">Meditime</string>
    <string name="ingresar">Ingresar</string>
    <string name="crear_perfil">Crear Perfil</string>
    <string name="iniciar">Iniciar</string>
    <string name="regresar">Regresar</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="content_logo">Logo MediTime</string>
    <string name="content_background">Imagen de Fondo</string>
    <string name="content_facebook">Facebook</string>
    <string name="content_google">Google</string>
    <string name="content_apple">Apple</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="celular">Celular</string>
    <string name="contrasena_nueva">Contraseña Nueva</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="condiciones_contrasena">La contraseña debe tener:\n• Una letra mayúscula\n• Un número\n• Un carácter especial</string>
    <string name="autorizacion_datos">Autoriza el tratamiento de \ndatos personales</string>
    <string name="registrar">Registrar</string>
    <string name="dialog_title_registro">¡Bienvenido!</string>
    <string name="dialog_message_registro">Tu registro ha sido exitoso.</string>
    <string name="menu_home">Pantalla Inicial</string>
    <string name="menu_medicine">Mis Medicamentos</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="principal_title">Home</string>
    <string name="principal_content_title">MediTime \nTiempo Justo para tu\n Medicina</string>
    <string name="principal_content_subtitle">Próximo Medicamento</string>
    <string name="principal_next_medicine">Acetaminofen \n20:00:00</string>
    <string name="settings_title">Configuraciones</string>
    <string name="change_password_settings">Cambiar contraseña</string>
    <string name="text_size_settings">Tamaño de la letra</string>
    <string name="volume_settings">Volumen de la alarma</string>
    <string name="melody_settings">Sonido de la alarma</string>
    <string name="medicine_title">Mis Medicamentos</string>
    <string name="medicine1">Etoricoxib</string>
    <string name="medicine2">Acetaminofen</string>
    <string name="medicine3">Omeprazol</string>
    <string name="medicine_detail_title">Detalle Medicamento</string>
    <string name="medicine_detail_medicine">Acetaminofen\nCápsulas</string>
    <string name="medicine_detail_remaining">7 Cápsulas\nrestantes</string>
    <string name="medicine_detail_periodicity">2 veces al día\n8:00 A.M  - 8:00 P.M</string>
    <string name="medicine_detail_alarm">Probar Alarma</string>
    <string name="medicine_detail_edit">Editar</string>
    <string name="medicine_detail_follow">Seguimiento</string>
    <string name="medicine_detail_delete">Eliminar</string>
    <string name="medicine_detail_back">Atrás</string>
    <string name="medicine_detail_delete_confirm_title">¿Eliminar medicamento?</string>
    <string name="medicine_detail_delete_confirm_message">Sí elimina este medicamento ya no recibirá alarmas sobre él.</string>
    <string name="alarm_title">Alarma</string>
    <string name="alarm_remaining">7 Cápsulas restantes</string>
    <string name="alarm_dose">Dosis: 1 Cápsula</string>
    <string name="alarm_time">Hora: 8:00 p.m.</string>
    <string name="alarm_button_confirm">Confirmar</string>
    <string name="alarm_button_snooze">Posponer</string>
    <string name="medicine_follow_up_title">Seguimiento</string>
    <string name="medicine_follow_up_date1">04/08/2025</string>
    <string name="medicine_follow_up_date2">03/08/2025</string>
    <string name="medicine_follow_up_date3">02/08/2025</string>
    <string name="medicine_follow_up_number1">3 de 3 Pastas</string>
    <string name="medicine_follow_up_number2">0 de 3 Pastas</string>
    <string name="medicine_follow_up_number3">2 de 3 Pastas</string>
    <string name="new_medicine_title">Agregar Medicamento</string>
    <string name="new_medicine_medicine_field">Medicamento</string>
    <string name="new_medicine_treatment_field">Tratamiento</string>
    <string name="new_medicine_type_field">Tipo</string>
    <string name="new_medicine_dose_field">Dosis</string>
    <string name="new_medicine_frequency_field">Frecuencia</string>
    <string name="new_medicine_quantity_field">Cantidad</string>
    <string name="new_medicine_treatment_duration">Duración del Tratamiento</string>
    <string name="new_medicine_indefinite_treatment">Indefinido</string>
    <string name="new_medicine_start_hour">Hora Inicio</string>
    <string name="new_medicine_days_field">Cantidad</string>
    <string name="new_medicine_camera_denied">Camera permission is required to take photos</string>
    <string name="new_medicine_time_picker_title">Selecciona la hora</string>
    <string name="dialog_title_new_medicine">¡Confirmado!</string>
    <string name="dialog_message_new_medicine">Tu medicamento ha sido registrado</string>
</resources>