<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlancoMediTime"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        tools:context=".CreateProfileActivity">

        <!-- Contenedor de inputs -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctnInputsCrearPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/ctnButtonsCrearPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitleCrearPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/crear_perfil"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNombreIngreso"
                style="@style/CompactTextInputLayout"
                android:layout_marginTop="18dp"
                android:hint="@string/nombre_completo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitleCrearPerfil">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputFechaNacimiento"
                style="@style/CompactTextInputLayout"
                android:hint="@string/fecha_nacimiento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNombreIngreso">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCorreo"
                style="@style/CompactTextInputLayout"
                android:hint="@string/correo_electronico"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputFechaNacimiento">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCelular"
                style="@style/CompactTextInputLayout"
                android:hint="@string/celular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputCorreo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputContrasena"
                style="@style/CompactTextInputLayout"
                android:hint="@string/contrasena_nueva"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputCelular">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRepetirContrasena"
                style="@style/CompactTextInputLayout"
                android:hint="@string/confirmar_contrasena"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputContrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtLimitContrasenaCrearPerfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/condiciones_contrasena"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/inputRepetirContrasena"
                app:layout_constraintStart_toStartOf="@id/inputRepetirContrasena"
                app:layout_constraintTop_toBottomOf="@id/inputRepetirContrasena" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Contenedor de botones -->
        <LinearLayout
            android:id="@+id/ctnButtonsCrearPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctnInputsCrearPerfil">

            <CheckBox
                android:id="@+id/chkTratramientoDatosCrearPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/autorizacion_datos"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegistrar"
                style="@style/TertiaryButton"
                android:layout_marginBottom="10dp"
                android:onClick="showDialogConfirm"
                android:text="@string/registrar"
                app:icon="@drawable/baseline_arrow_forward_24" />

            <Button
                android:id="@+id/btnRegresarCrearPerfil"
                style="@style/SecondaryButton"
                android:layout_marginBottom="20dp"
                android:onClick="goBackToMainActivity"
                android:text="@string/regresar"
                app:icon="@drawable/baseline_arrow_back_24" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

