<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlancoMediTime">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MedicineFollowUpActivity">

        <include layout="@layout/include_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ctnInputNewMedicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtTitleAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/medicine1"
                        android:textColor="@color/black"
                        android:textSize="32sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CompactTextInputLayout"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="52dp"
                        android:hint="@string/medicine_follow_up_date1"
                        app:startIconDrawable="@drawable/baseline_check_24"
                        app:startIconMinSize="44dp"
                        app:startIconScaleType="center"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="315dp"
                            android:layout_height="56dp"
                            android:enabled="false"
                            android:text="@string/medicine_follow_up_number1"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CompactTextInputLayout"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="36dp"
                        android:hint="@string/medicine_follow_up_date2"
                        app:startIconDrawable="@drawable/outline_close_24"
                        app:startIconMinSize="44dp"
                        app:startIconScaleType="center"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="315dp"
                            android:layout_height="56dp"
                            android:enabled="false"
                            android:text="@string/medicine_follow_up_number2"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CompactTextInputLayout"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/medicine_follow_up_date3"
                        app:startIconDrawable="@drawable/baseline_error_24"
                        app:startIconMinSize="44dp"
                        app:startIconScaleType="center"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="315dp"
                            android:layout_height="56dp"
                            android:enabled="false"
                            android:text="@string/medicine_follow_up_number3"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ctnActionsDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ctnInputNewMedicine"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnRegresarMedicine"
                        style="@style/SecondaryButton"
                        android:layout_marginBottom="61dp"
                        android:onClick="goBackToMedicineDetailActivity"
                        android:text="@string/regresar"
                        app:icon="@drawable/baseline_arrow_back_24" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <include layout="@layout/base_drawer_activity" />

</androidx.drawerlayout.widget.DrawerLayout>

