<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlancoMediTime"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctnSuperior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ctnLogoIngreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgLogoIngreso"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-20dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/txtIngresarIngreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-40dp"
                    android:text="@string/ingresar"
                    android:textColor="@color/black"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ctnInputsIngreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ctnLogoIngreso">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNombreIngreso"
                    style="@style/CompactTextInputLayout"
                    android:layout_marginBottom="34dp"
                    android:hint="@string/correo_electronico">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="281dp"
                        android:layout_height="56dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputContrasenaIngreso"
                    style="@style/CompactTextInputLayout"
                    android:hint="@string/contrasena">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="281dp"
                        android:layout_height="56dp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ctnButtonsIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctnSuperior"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/btnInitIngreso"
                style="@style/MainButton"
                android:onClick="navigateToPrincipalScreen"
                android:text="@string/iniciar"
                app:icon="@drawable/baseline_arrow_forward_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgFacebook"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/content_facebook"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/facebook_icon" />

                <ImageView
                    android:id="@+id/imgGoogle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/content_google"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/google_icon" />

                <ImageView
                    android:id="@+id/imgApple"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/content_apple"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/apple_icon" />
            </LinearLayout>

            <Button
                android:id="@+id/btnBackIngreso"
                style="@style/SecondaryButton"
                android:layout_marginBottom="77dp"
                android:onClick="goBackToMainActivity"
                android:text="@string/regresar"
                app:icon="@drawable/baseline_arrow_back_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
